# SilverWalk

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  bootstrap.py  map_view.py
artifacts/experiments/condensed_nearest_neighbour_two_stage/: condensed_nearest_neighbour_two_stage_summary.csv
artifacts/recommendations/: point_improvement_recommendations.csv
data/NODELINKDATA/: MOCT_LINK.dbf  MOCT_LINK.shp  MOCT_LINK.shx  MOCT_NODE.dbf  MOCT_NODE.shp  MOCT_NODE.shx  MULTILINK.dbf  TURNINFO.dbf  내역서.csv
data/SIGUNGU/: 센서스 공간정보 지역 코드.xlsx
docs/: original_train_data_preprocessing_plan.md  project_structure.md  requirements_silverwalk_ai.md  stack.md  zero_risk_prediction_strategy.md  개선우선순위추천방법.md  기법별_성능평가.md  모델2개방법제안.md  위험도예측결과시각화방법.md
docs/API_guides/: WMTS_API_guide.md
notebooks/: model.ipynb  model1.ipynb  model2.ipynb  개선우선순위추천.ipynb  데이터전처리.ipynb  데이터전처리결과시각화.ipynb  최종결과.ipynb
notebooks/기법별성능비교/: CNN_모델2개.ipynb  OSS_모델2개.ipynb  RandomUnderSampling_모델2개.ipynb  SMOTE_모델2개.ipynb  TomekLinks_모델2개.ipynb  단일모델_baseline.ipynb  모델2개_baseline.ipynb
pages/: 01_data_overview.py  02_map_preview.py  03_prediction_results.py
scripts/data/: preprocess_original_train_data.py
scripts/explain/: recommend_improvements.py
scripts/predict/: predict_all_points.py  predict_two_stage_zero_risk.py
scripts/train/: train_accident_classifier.py  train_mlp.py  train_positive_risk_regressor.py
src/silverwalk_ai/: __init__.py
(+18 files in other folders)
