[project]
name = "silverwalk"
version = "0.1.0"
description = "Streamlit app for senior pedestrian accident risk prediction and map visualization."
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.36",
  "streamlit-folium>=0.20",
  "folium>=0.17",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyogrio>=0.9",
  "fiona>=1.9",
  "pandas>=2.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "scikit-learn>=1.5",
  "tensorflow>=2.16",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
